# ChangeLog for dev-libs/g-wrap
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/g-wrap/ChangeLog,v 1.13 2003/07/24 18:38:41 taviso Exp $

  21 Jul 2003; Alastair Tse <liquidx@gentoo.org> g-wrap-1.2.1-r2.ebuild:
  unslotting older version in a futile attempt to unslot this package.

  24 Jul 2003; Tavis Ormandy <taviso@gentoo.org> g-wrap-1.3.4.ebuild:
  ~alpha

  16 Jul 2003; Alastair Tse <liquidx@gentoo.org> g-wrap-1.3.4.ebuild:
  about time this went stable for x86

*g-wrap-1.3.4 (17 Mar 2003)

  03 Apr 2003; Alastair Tse <liquidx@gentoo.org> ChangeLog :
  Fixed edolnx's inability to correctly enter a changelog entry according
  to the guidelines.

  19 Mar 2003; Jon Nall <nall@gentoo.org> g-wrap-1.3.4.ebuild :
  added ~ppc
	
  17 Mar 2003; Carl Perry <edolnx@gentoo.org> g-wrap-1.3.4.ebuild :
  Added 1.3.4 for gnucash 1.8 series - doesn't seem to adversely 
  interact with any other apps

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*g-wrap-1.3.1-r1 (1 Apr 2002)

  1 Apr 2002; M.Schlemmer <azarah@gentoo.org> g-wrap-1.3.1.ebuild :

  Libtoolize to fix "relink" bug in older versions of libtool.

*g-wrap-1.2.1-r2 (13 Feb 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*g-wrap-1.2.1 (28 Mar 2002)

  28 Mar 2002; Seemant Kulleen <seemant@gentoo.org> g-wrap-1.2.1.ebuild :

  Changed the SRC_URI to an http:// destination instead of ftp://

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.
