@@ -1,7 +1,7 @@
-MD5 53bfbae6ded8bddbabf5d68dea484801 ChangeLog 1944
+MD5 722b6efe308352c677e8b3e6f80b136f ChangeLog 2036
 MD5 3e1571af973738fdfdab76c5cd657d67 g-wrap-1.2.1-r2.ebuild 1104
 MD5 defeb0f575a13e00f9242ae0720c65d2 g-wrap-1.3.1-r1.ebuild 937
-MD5 c276819a6a1ea2337e81e58c43e4be63 g-wrap-1.3.4.ebuild 994
+MD5 854ff9ca2ec29d51d426dd90e95eec4f g-wrap-1.3.4.ebuild 993
 MD5 80850151bae2bd61c4ac796f83656ef6 metadata.xml 217
 MD5 e8dd680595425a60c9a82eed7c227e4d files/digest-g-wrap-1.2.1-r2 64
 MD5 89d7f0500866fe4fde1df5715006c859 files/digest-g-wrap-1.3.1-r1 64
