@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/g-wrap/Attic/g-wrap-1.3.4.ebuild,v 1.5 2003/09/08 07:19:26 msterret Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/g-wrap/Attic/g-wrap-1.3.4.ebuild,v 1.6 2004/01/09 19:20:38 agriffis Exp $
 
 S=${WORKDIR}/${P}
 DESCRIPTION="A tool for exporting C libraries into Scheme"
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnucash.org"
 
 SLOT="1.3"
 LICENSE="GPL-2"
-KEYWORDS="x86 ~ppc ~alpha"
+KEYWORDS="x86 ~ppc alpha"
 
 inherit flag-o-matic
 
