@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/g-wrap
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/g-wrap/ChangeLog,v 1.13 2003/07/24 18:38:41 taviso Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/g-wrap/ChangeLog,v 1.14 2004/01/09 19:20:38 agriffis Exp $
+
+  09 Jan 2004; Aron Griffis <agriffis@gentoo.org> g-wrap-1.3.4.ebuild:
+  stable on alpha
 
   21 Jul 2003; Alastair Tse <liquidx@gentoo.org> g-wrap-1.2.1-r2.ebuild:
   unslotting older version in a futile attempt to unslot this package.
